--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 		<java.version>11</java.version>
 		<spring.version>2.6.2</spring.version>
 		<lombok.version>1.18.22</lombok.version>
-		<junit.version>5.8.2</junit.version>
-		<mockito.version>4.5.1</mockito.version>
+		<junit.version>5.9.0</junit.version>
+		<mockito.version>3.12.4</mockito.version>
 		<springdoc.version>1.6.4</springdoc.version>
 	</properties>
 	<dependencies>
@@ -52,13 +52,13 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>3.12.4</version>
+			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
-			<version>5.9.0</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
